# BoostedPP

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
api/: CMakeLists.txt  Dockerfile  README.md  server.cpp
cli/: cv.cpp  main.cpp  predict.cpp  train.cpp
cmake/: boostedpp-config.cmake
docs/: API.md  Doxyfile.in
examples/: simple_example.cpp
include/boostedpp/: boostedpp.hpp  config.hpp  data.hpp  gbdt.hpp  metrics.hpp  serialization.hpp  simd_utils.hpp  tree.hpp
src/: config.cpp  data.cpp  gbdt.cpp  serialization.cpp  simd_utils.cpp  tree.cpp
tests/: CMakeLists.txt  test_data.cpp  test_main.cpp
